# MediaHub-AI-Node

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.txt  README.md  REPOSITORY_SETUP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  init_database.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml  test.yml
app/: config.py  database.py  main.py  models.py  version.py
app/analyzer/: __init__.py  base.py  ffprobe.py  filename.py  filesystem.py  manager.py  mediainfo.py  quality.py  quality_fingerprint.py  quality_profiles.py  registry.py
app/api/: analyzers.py  cache.py  jobs.py  knowledge.py  knowledge_import.py  providers.py  quality.py  references.py
app/cache/: models.py  service.py
app/jobs/: base.py  cache_purge.py  knowledge_search.py  media_analyze.py  provider_execute.py  reference_compare.py  reference_create.py  registry.py  system_test.py  utils.py  worker.py
app/knowledge/: constants.py  graph.py  importer.py  matcher.py  merge.py  (+3 more)
docs/: API.md  BACKUP_AND_RESTORE.md  HANDBOOK.md  INSTALLATION.md  KNOWLEDGE_DATABASE.md  MAINTENANCE.md  RASPBERRY_PI_SETUP.md  README.md  REPOSITORY_MIGRATION.md  SYSTEMD_SERVICE.md  TROUBLESHOOTING.md
examples/: curl_examples.sh
licenses/: README.md
migrations/: add_job_details.py  normalize_knowledge_relations.py
scripts/: backup_ai_node.sh  build_documentation.sh  health_check.sh  install_service.sh  restore_ai_node.sh
tests/: test_ai_node_smoke.py  test_reference_compare.py
(+10 files in other folders)
